# test_rendy

./: Cargo.toml  build.sh
docs/: mkdocs.yml
docs/docs/: index.md  tri_tutorial.md
docs/src/: tri_tutorial.md
src/: main.rs
